# nextgen-bank-fastapi

./: .dockerignore  .gitignore  celerybeat-schedule-shm  celerybeat-schedule-wal  local.yml  pyproject.toml
.envs/: .env.example
backend/app/: main.py
backend/app/api/routes/: home.py
backend/app/core/: celery_app.py  config.py  db.py  logging.py
backend/docker/local/celery/flower/: start.sh
backend/docker/local/fastapi/: Dockerfile  entrypoint.sh  start.sh
backend/docker/local/fastapi/celery/beat/: start.sh
backend/docker/local/fastapi/celery/flower/: start.sh
backend/docker/local/fastapi/celery/worker/: start.sh
backend/docker/local/prometheus/: prometheus.yml
backend/docker/local/traefik/: traefik.yml
