[project]
name = "nextgen-bank-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "shailendrasinghofficial3",email = "shailendrasinghofficial3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "pydantic-settings[dotenv] (>=2.12.0,<3.0.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
